--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,12 +1,12 @@
 {% comment %}
 Day 1: 
-13:00 R for Reproducible Scientific Analysis (Part 1)
+13:00 Programming with R (Part 1)
 15:15 Coffee Break
-15:30 R for Reproducible Scientific Analysis (Part 1 continued)
+15:30 Programming with R (Part 1 continued)
 17:00 End
 
 Day 2:
-13:00 R for Reproducible Scientific Analysis (Part 1 continued)
+13:00 Programming with R (Part 1 continued)
 14:15 Automating tasks with the Unix shell
 15:15 Coffee Break
 15:30 Automating tasks with the Unix shell (continued)
@@ -15,13 +15,13 @@ Day 2:
 Day 3: 
 13:00 Version control with Git
 15:00 Coffee Break
-15:15 R for Reproducible Scientific Analysis (Part 2)
+15:15 Programming with R  (Part 2)
 17:00 End
 
 Day 4: 
-13:00 R for Reproducible Scientific Analysis (Part 2 continued)
+13:00 Programming with R (Part 2 continued)
 15:15 Coffee Break
-15:30 R for Reproducible Scientific Analysis (Part 2 continued)
+15:30 Programming with R (Part 2 continued)
 17:00 End
 {% endcomment %}
 
@@ -38,7 +38,7 @@ Day 4: 
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>13:00</td>  <td>R for Reproducible Scientific Analysis (Part 1 continued)</td> </tr>
+      <tr> <td>13:00</td>  <td>Programming with R (Part 1 continued)</td> </tr>
       <tr> <td>14:15</td>  <td>Automating tasks with the Unix shell</td> </tr>
       <tr> <td>15:15</td>  <td>Coffee break</td> </tr>
       <tr> <td>15:30</td>  <td>Automating tasks with the Unix shell (continued)</td> </tr>
@@ -52,16 +52,16 @@ Day 4: 
     <table class="table table-striped">
       <tr> <td>13:00</td>  <td>Version control with Git</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee break</td> </tr>
-      <tr> <td>15:15</td>  <td>R for Reproducible Scientific Analysis (Part 2)</td> </tr>
+      <tr> <td>15:15</td>  <td>Programming with R (Part 2)</td> </tr>
       <tr> <td>17:00</td>  <td>End</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 4</h3>
     <table class="table table-striped">
-      <tr> <td>13:00</td>  <td>R for Reproducible Scientific Analysis (Part 2)</td> </tr>
+      <tr> <td>13:00</td>  <td>Programming with R (Part 2)</td> </tr>
       <tr> <td>15:00</td>  <td>Coffee break</td> </tr>
-      <tr> <td>15:15</td>  <td>R for Reproducible Scientific Analysis (Part 2)</td> </tr>
+      <tr> <td>15:15</td>  <td>Programming with R (Part 2)</td> </tr>
       <tr> <td>17:00</td>  <td>End</td> </tr>
     </table>
   </div>
